kubernetes/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hsbc-prod

  labels:
    app.kubernetes.io/part-of: hsbc
    environment: prod
